--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -39,7 +39,10 @@
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Contact</a></li>
             </ul>
-            <a href="#" class="btn btn-outline-primary">Give</a>
+            <div class="flex-space-between">
+                <a href="#" class="btn btn-outline-primary mr-1 login">Login</a>
+                <a href="#" class="btn btn-outline-primary give">Give</a>
+            </div>
         </div>
     </nav>
 
@@ -50,7 +53,7 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>For young professionals who are commited to excellence</h2>
+                        <h2>For young professionals and college students who are commited to excellence</h2>
                         <a href="#" class="btn btn-outline-primary">Join Us</a>
                     </div>
                 </div>
@@ -93,6 +96,7 @@
                 </div>
             </div>
         </section>
+        <!-- == Pastors == -->
         <section id="pastors">
             <div class="container">
                 <div class="row even-columns">
@@ -119,6 +123,77 @@
                             consequuntur dicta dignissimos. Similique eveniet necessitatibus, praesentium qui, et in
                             sequi quos, beatae quae enim porro est.
                         </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- == Paralax == -->
+        <section id="paralax">
+            <div class="container">
+                <div class="row" data-aos="fade-up" data-aos-delay="100">
+                    <div class="paralax-txt">
+                        <h2>Welcome Home</h2>
+                        <p class="lead">
+                            We are an Assemblies of God church located in Tanzania. We know you have a lot of great
+                            churches to choose from but if you ever find yourself in our vicinity then you are mostly
+                            welcome. We are a Holy Spirit-filled church and a place where people gather to worship Jesus
+                            Christ. Feel free to come fellowship with us as we are always looking forward to meet new
+                            faces.
+                        </p>
+                        <a href="" class="btn">Join Us</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- == Campus == -->
+        <section id="campus">
+            <div class="container">
+                <h1 class="campus-title" data-aos="fade-right" data-aos-delay="100">Choose Your Campus</h1>
+                <div class="row even-columns">
+                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Main Campus</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                similique perferendis? Eos.
+                            </p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Kigamboni Campus</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                similique perferendis? Eos.
+                            </p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                    </div>
+                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Dodoma Campus</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                similique perferendis? Eos.
+                            </p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
                     </div>
                 </div>
             </div>
