--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -35,12 +35,13 @@
                 <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
                 <li class="nav-item"><a href="app/about.html" class="nav-link change-Color">About</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between">
-                <a href="#" class="btn btn-outline-primary mr-1 login">Login</a>
+                <a href="#" class="btn btn-outline-primary login">Login</a>
                 <a href="#" class="btn btn-outline-primary give">Give</a>
             </div>
         </div>
@@ -137,7 +138,8 @@
                             We are an Assemblies of God church located in Tanzania. We know you have a lot of great
                             churches to choose from but if you ever find yourself in our vicinity then you are mostly
                             welcome. We are a Holy Spirit-filled church and a place where people gather to worship Jesus
-                            Christ. Feel free to come fellowship with us as we are always looking forward to meet new
+                            Christ. Feel free to come and fellowship with us as we are always looking forward to meet
+                            new
                             faces.
                         </p>
                         <a href="" class="btn">Join Us</a>
@@ -148,53 +150,169 @@
         <!-- == Campus == -->
         <section id="campus">
             <div class="container">
-                <h1 class="campus-title" data-aos="fade-right" data-aos-delay="100">Choose Your Campus</h1>
+                <h1 class="campus-title" data-aos="fade-right" data-aos-delay="100">Find Your Campus</h1>
+                <p class="campus-para" data-aos="fade-left" data-aos-delay="100">
+                    We are a church meeting in multiple locations across Tanzania. Select a campus below to
+                    get more information on service times and directions.
+                </p>
                 <div class="row even-columns">
-                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
-                            <div class="inner">
-                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            <div class="card-inner">
+                                <img src="assets/img/church/church2.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Main Campus</h2>
+                            <h2>Bahari Beach - DSM</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
+                                iusto
                                 similique perferendis? Eos.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
+                        <div class="campus-text">
+                            <span>CAMPUS</span>
+                        </div>
                     </div>
-                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
-                            <div class="inner">
-                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            <div class="card-inner">
+                                <img src="assets/img/church/ch-kg2.png" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Kigamboni Campus</h2>
+                            <h2>Gezaulole - DSM</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
+                                iusto
                                 similique perferendis? Eos.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
+                        <div class="campus-text">
+                            <span>CAMPUS</span>
+                        </div>
                     </div>
-                    <div class="card"  data-aos="fade-up" data-aos-delay="100">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-img">
-                            <div class="inner">
-                                <img src="assets/img/church/church1.png" alt="" class="card-img-top fluid">
+                            <div class="card-inner">
+                                <img src="assets/img/church/ch-dodoma1.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Dodoma Campus</h2>
+                            <h2>Iyumbu - Dodoma</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint iusto
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
+                                iusto
                                 similique perferendis? Eos.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
+                        <div class="campus-text">
+                            <span>CAMPUS</span>
+                        </div>
                     </div>
+                </div>
+            </div>
+        </section>
+        <!-- == Latest Message == -->
+        <section id="latest-message">
+            <div class="container">
+                <h1 class="latest-message-title" data-aos="fade-right" data-aos-delay="100">Latest Message</h1>
+                <div class="row">
+                    <div class="video-wrapper" data-aos="fade-up" data-aos-delay="100">
+                        <iframe frameborder="0"
+                            src="https://www.youtube.com/embed?listType=playlist&list=UUQLLAyIDCHSstiXWt5w2dpQ">
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- == Abundant Harvest == -->
+        <section id="abundant-harvest">
+            <div class="container">
+                <img src="assets/img/church/abundant-harvest12-01.jpg" alt="" class="img-fluid" data-aos="fade-left"
+                    data-aos-delay="100">
+            </div>
+        </section>
+
+        <!-- == weekly-services == -->
+        <section id="weekly-services">
+            <div class="container">
+                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERING</h1>
+                <div class="row even-columns">
+                    <div class="card" data-aos="flip-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>SUNDAY</h2>
+                            <p>
+                            <div class="first-service">
+                                First Service:
+                                <br>
+                                <small><b>7:00 AM - 9:00 AM</b></small>
+                            </div>
+                            <hr>
+                            <div class="second-service">
+                                Second Service:
+                                <br>
+                                <small><b>09:30 AM - 12:30 PM</b></small>
+                            </div>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>WEDNESDAY</h2>
+                            <p>
+                                Evening Service:
+                                <br>
+                                <small><b>4:30 PM - 6:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>FRIDAY</h2>
+                            <p>
+                                Evening Prayers:
+                                <br>
+                                <small><b>4:30 PM - 6:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                    <!-- <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>SUNDAY</h2>
+                            <p>
+                            <div class="first-service">
+                                First Service:
+                                <br>
+                                <small><b>7:00 AM - 9:00 AM</b></small>
+                            </div>
+                            <hr>
+                            <div class="second-service">
+                                Second Service:
+                                <br>
+                                <small><b>09:30 AM - 12:30 PM</b></small>
+                            </div>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div> -->
                 </div>
             </div>
         </section>
