--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -13,6 +13,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&display=swap" rel="stylesheet">
+    <!-- === Font Awesome Online === -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
@@ -109,20 +111,19 @@
                         <h1>Rev. Arch. Yared Dondo & Pastor Matilda Dondo</h1>
                         <p class="text-justify">
                             <br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis porro quam in ipsa
-                            molestias minima magnam aspernatur minus quos repudiandae, sequi at nulla tempora maiores
-                            itaque nostrum, autem repellat eos.
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit maiores illo inventore,
-                            adipisci quo eaque dolor porro, impedit, labore numquam officia cupiditate at est modi.
-                            Praesentium corrupti ut asperiores culpa!
+                            City Harvest is a church designed for college students and young professionals. It is a home
+                            away from home. It is a place where you will discover your talents, nurture them, learn from
+                            others, and others learn from you.
                             <br>
                             <br>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam minima nostrum tempora in
-                            cumque debitis obcaecati esse consequatur vero. Repudiandae, facilis provident soluta vel
-                            eveniet similique consequuntur voluptatibus fuga eos?
-                            Fugit culpa saepe nemo harum quos odit vero neque, voluptatibus totam repellat nobis
-                            consequuntur dicta dignissimos. Similique eveniet necessitatibus, praesentium qui, et in
-                            sequi quos, beatae quae enim porro est.
+                            Ever since the church started, we have strived to reach college students with the message of
+                            the love of Christ, we have seen many of them get transformed and now, after college, being
+                            tools to transform other college students and their fellow professionals.
+                            <br>
+                            <br>
+                            We personally welcome you to be part of this great family.
+                            <br>
+                            <b>Karibu sana and Be Transformed to transform.</b>
                         </p>
                     </div>
                 </div>
@@ -150,9 +151,9 @@
         <!-- == Campus == -->
         <section id="campus">
             <div class="container">
-                <h1 class="campus-title" data-aos="fade-right" data-aos-delay="100">Find Your Campus</h1>
+                <h1 class="campus-title" data-aos="fade-right" data-aos-delay="100">Find Your Branch</h1>
                 <p class="campus-para" data-aos="fade-left" data-aos-delay="100">
-                    We are a church meeting in multiple locations across Tanzania. Select a campus below to
+                    We are a church meeting in multiple locations around the world. Select a campus below to
                     get more information on service times and directions.
                 </p>
                 <div class="row even-columns">
@@ -163,7 +164,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Bahari Beach - DSM</h2>
+                            <h2>Bahari Beach</h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
                                 iusto
@@ -172,7 +173,7 @@
                             <a href="" class="btn">Read More</a>
                         </div>
                         <div class="campus-text">
-                            <span>CAMPUS</span>
+                            <span>DSM</span>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
@@ -182,7 +183,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Gezaulole - DSM</h2>
+                            <h2>KIGAMBONI</h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
                                 iusto
@@ -191,7 +192,7 @@
                             <a href="" class="btn">Read More</a>
                         </div>
                         <div class="campus-text">
-                            <span>CAMPUS</span>
+                            <span>DSM</span>
                         </div>
                     </div>
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
@@ -201,7 +202,7 @@
                             </div>
                         </div>
                         <div class="card-body">
-                            <h2>Iyumbu - Dodoma</h2>
+                            <h2>DODOMA</h2>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
                                 iusto
@@ -210,7 +211,48 @@
                             <a href="" class="btn">Read More</a>
                         </div>
                         <div class="campus-text">
-                            <span>CAMPUS</span>
+                            <span>DODOMA</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="row even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="assets/img/church/rock-city-mall-mwanza.jpg" alt=""
+                                    class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>Rock City Mall</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
+                                iusto
+                                similique perferendis? Eos.
+                            </p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                        <div class="campus-text">
+                            <span>MWANZA</span>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-img">
+                            <div class="card-inner">
+                                <img src="assets/img/church/bangalore.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h2>BANGALORE</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
+                                iusto
+                                similique perferendis? Eos.
+                            </p>
+                            <a href="" class="btn">Read More</a>
+                        </div>
+                        <div class="campus-text">
+                            <span>INDIA</span>
                         </div>
                     </div>
                 </div>
@@ -243,7 +285,7 @@
             <div class="container">
                 <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERING</h1>
                 <div class="row even-columns">
-                    <div class="card" data-aos="flip-up" data-aos-delay="100">
+                    <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
                         <div class="card-body">
                             <h2>SUNDAY</h2>
                             <p>
@@ -267,6 +309,19 @@
                 </div>
                 <div class="row even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>TUESDAY</h2>
+                            <p>
+                                WELL.COM Groups:
+                                <br>
+                                <small><b>5:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                    <div class="card" id="wed" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
                             <h2>WEDNESDAY</h2>
                             <p>
@@ -292,35 +347,69 @@
                             <span>SERVICE</span>
                         </div>
                     </div>
-                    <!-- <div class="card" data-aos="fade-up" data-aos-delay="100">
-                        <div class="card-body">
-                            <h2>SUNDAY</h2>
-                            <p>
-                            <div class="first-service">
-                                First Service:
-                                <br>
-                                <small><b>7:00 AM - 9:00 AM</b></small>
-                            </div>
-                            <hr>
-                            <div class="second-service">
-                                Second Service:
-                                <br>
-                                <small><b>09:30 AM - 12:30 PM</b></small>
-                            </div>
-                            </p>
-                        </div>
-                        <div class="weekly-services-text">
-                            <span>SERVICE</span>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
     </main>
 
     <!-- === Footer === -->
-    <footer>
-
+    <footer id="footer">
+        <div class="container">
+            <div class="grid-4">
+                <div class="col">
+                    <img src="assets/img/logo/logo3.png" alt="" class="logo">
+                    <!-- <p>
+                        For young professionals and college students who are committed to excellence.
+                    </p> -->
+                </div>
+                <div class="col">
+                    <h2>QUICK LINKS</h2>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Events</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
+                <!-- <div class="vertical-line"></div> -->
+                <div class="col">
+                    <h2>LOCATIONS</h2>
+                    <ul>
+                        <li>Bahari Beach</li>
+                        <li>Kigamboni</li>
+                        <li>Dodoma</li>
+                        <li>Rock City Mall</li>
+                        <li>Bangalore</li>
+                    </ul>
+                </div>
+                <!-- <div class="vertical-line"></div> -->
+                <div class="col">
+                    <div class="col-staff">
+                        <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
+                    </div>
+                    <div class="social">
+                        <a href="https://www.youtube.com/@Revoobit_TZ" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                        <a href="https://www.facebook.com/revoobitz" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-facebook"></i>
+                        </a>
+                        <a href="https://www.instagram.com/revoobit_tz/" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://twitter.com/revoobit_tz" target="_blank" rel="noopener noreferrer">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row even-columns pt-3">
+                <hr>
+            </div>
+            <div class="row pt-2">
+                <p>&copy; 2023 TAG City Harvest Church</p>
+            </div>
+        </div>
     </footer>
 
     <!-- === Scripts === -->
