--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -32,6 +32,10 @@
         <a href="#home" class="nav-brand">
             <img src="assets/img/logo/logo2.png" alt="" id="logo">
         </a>
+        <label for="check" id="check-btn">
+            <i class="fas fa-th-large"></i>
+        </label>
+        <input type="checkbox" name="check" id="check">
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="#home" class="nav-link active">Home</a></li>
@@ -103,10 +107,10 @@
         <section id="pastors">
             <div class="container">
                 <div class="row even-columns">
-                    <div class="pastors-img" data-aos="fade-right" data-aos-delay="100">
+                    <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
                         <img src="assets/img/pastors/pastors000.png" alt="">
                     </div>
-                    <div class="pastors-txt" data-aos="fade-left" data-aos-delay="100">
+                    <div class="pastors-txt" data-aos="zoom-in-up" data-aos-delay="100">
                         <h1 class="lead"> MEET OUR LEAD PASTORS</h1>
                         <h1>Rev. Arch. Yared Dondo & Pastor Matilda Dondo</h1>
                         <p class="text-justify">
@@ -283,8 +287,8 @@
         <!-- == weekly-services == -->
         <section id="weekly-services">
             <div class="container">
-                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERING</h1>
-                <div class="row even-columns">
+                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERINGS</h1>
+                <div class="even-columns">
                     <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
                         <div class="card-body">
                             <h2>SUNDAY</h2>
@@ -307,7 +311,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row even-columns">
+                <div class="even-columns">
                     <div class="card" data-aos="fade-up" data-aos-delay="100">
                         <div class="card-body">
                             <h2>TUESDAY</h2>
@@ -363,26 +367,25 @@
                     </p> -->
                 </div>
                 <div class="col">
-                    <h2>QUICK LINKS</h2>
+                    <h3 class="col-title">QUICK LINKS</h3>
                     <ul class="nav-menu">
                         <li class="nav-item"><a href="" class="nav-link">About</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">I'm New</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Events</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
                         <li class="nav-item"><a href="" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
-                <!-- <div class="vertical-line"></div> -->
                 <div class="col">
-                    <h2>LOCATIONS</h2>
-                    <ul>
-                        <li>Bahari Beach</li>
-                        <li>Kigamboni</li>
-                        <li>Dodoma</li>
-                        <li>Rock City Mall</li>
-                        <li>Bangalore</li>
+                    <h3 class="col-title">LOCATIONS</h3>
+                    <ul class="nav-menu">
+                        <li class="nav-item"><a href="" class="nav-link">Bahari Beach</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Kigamboni</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Dodoma</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Rock City Mall</a></li>
+                        <li class="nav-item"><a href="" class="nav-link">Bangalore</a></li>
                     </ul>
                 </div>
-                <!-- <div class="vertical-line"></div> -->
                 <div class="col">
                     <div class="col-staff">
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
@@ -403,13 +406,20 @@
                     </div>
                 </div>
             </div>
-            <div class="row even-columns pt-3">
+            <div class="even-columns pt-3">
                 <hr>
             </div>
             <div class="row pt-2">
-                <p>&copy; 2023 TAG City Harvest Church</p>
+                <p class="copyright">&copy; <span id="year"></span> TAG City Harvest Church</p>
             </div>
         </div>
+        <!-- === Go-Top === -->
+        <div class="go_top">
+            <a href="#home">
+                <span class="fas fa-angle-up"></span>
+            </a>
+        </div>
+        <!-- End Go-Top -->
     </footer>
 
     <!-- === Scripts === -->
