--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -72,23 +72,23 @@
         <section id="services-schedule">
             <div class="container">
                 <div class="row">
-                    <div class="card p-2">
+                    <div class="card">
                         <div class="card-body pt-1">
-                            <div class="flex-space-between">
+                            <div class="flex-space-between services-all-desktop">
                                 <div class="head-txt">
                                     <h1>TAG City Harvest</h1>
                                     <h2>SUNDAY SERVICES</h2>
                                 </div>
-                                <div class="content-txt">
+                                <div class="content-txt-first">
                                     <p>
                                         First service:
                                         <br>
-                                        <small> 07:00 AM - 09:00 AM</small>
+                                        <small>07:00 AM - 09:00 AM</small>
                                         <br>
                                         ENGLISH
                                     </p>
                                 </div>
-                                <div class="content-txt">
+                                <div class="content-txt-second">
                                     <p>
                                         Second service:
                                         <br>
@@ -96,6 +96,32 @@
                                         <br>
                                         SWAHILI
                                     </p>
+                                </div>
+                            </div>
+                            <div class="services-all-mobile">
+                                <div class="head-txt">
+                                    <h1>TAG City Harvest</h1>
+                                    <h2>SUNDAY SERVICES</h2>
+                                </div>
+                                <div class="space-between">
+                                    <div class="content-txt-first">
+                                        <p>
+                                            First service:
+                                            <br>
+                                            <small>07:00 AM - 09:00 AM</small>
+                                            <br>
+                                            ENGLISH
+                                        </p>
+                                    </div>
+                                    <div class="content-txt-second">
+                                        <p>
+                                            Second service:
+                                            <br>
+                                            <small>09:30 AM - 12:30 PM</small>
+                                            <br>
+                                            SWAHILI
+                                        </p>
+                                    </div>
                                 </div>
                             </div>
                         </div>
