--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -134,7 +134,7 @@
             <div class="container">
                 <div class="row even-columns">
                     <div class="pastors-img" data-aos="zoom-in-up" data-aos-delay="100">
-                        <img src="assets/img/pastors/pastors000.png" alt="">
+                        <img src="assets/img/pastors/lead-pastors.png" alt="">
                     </div>
                     <div class="pastors-txt" data-aos="zoom-in-up" data-aos-delay="100">
                         <h1 class="lead"> MEET OUR LEAD PASTORS</h1>
@@ -417,16 +417,16 @@
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
                     </div>
                     <div class="social">
-                        <a href="https://www.youtube.com/@Revoobit_TZ" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.youtube.com/@CityHarvestChurchDar/featured" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="https://www.facebook.com/revoobitz" target="_blank" rel="noopener noreferrer">
+                        <a href="" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="https://www.instagram.com/revoobit_tz/" target="_blank" rel="noopener noreferrer">
+                        <a href="" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="https://twitter.com/revoobit_tz" target="_blank" rel="noopener noreferrer">
+                        <a href="" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
