--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -46,7 +46,7 @@
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Contact</a></li>
             </ul>
-            <div class="flex-space-between">
+            <div class="flex-space-between login-give">
                 <a href="#" class="btn btn-outline-primary login">Login</a>
                 <a href="#" class="btn btn-outline-primary give">Give</a>
             </div>
