--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -196,9 +196,9 @@
                         <div class="card-body">
                             <h2>Bahari Beach</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
-                                iusto
-                                similique perferendis? Eos.
+                                Kunduchi Road, City Harvest Street
+                                <br>
+                                <b>PLOT</b> 199 Bahari Beach.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
@@ -215,9 +215,9 @@
                         <div class="card-body">
                             <h2>KIGAMBONI</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
-                                iusto
-                                similique perferendis? Eos.
+                                Kimbiji Road, Bamba Street,
+                                <br>
+                                <b>PLOT</b> 243 Gezaulole.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
@@ -234,9 +234,9 @@
                         <div class="card-body">
                             <h2>DODOMA</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
-                                iusto
-                                similique perferendis? Eos.
+                                Iyumbu Road, CH Street
+                                <br>
+                                <b>PLOT</b> 458 Iyumbu.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
@@ -256,9 +256,9 @@
                         <div class="card-body">
                             <h2>Rock City Mall</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
-                                iusto
-                                similique perferendis? Eos.
+                                Makongoro Road, Bondeni Street
+                                <br>
+                                <b>PLOT</b> 387 Ilemela.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
@@ -275,9 +275,9 @@
                         <div class="card-body">
                             <h2>BANGALORE</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae nobis sint
-                                iusto
-                                similique perferendis? Eos.
+                                Hennur-Bagalur Road, Kothanur Street
+                                <br>
+                                <b>PLOT</b> 453 Bengaluru.
                             </p>
                             <a href="" class="btn">Read More</a>
                         </div>
@@ -417,7 +417,8 @@
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
                     </div>
                     <div class="social">
-                        <a href="https://www.youtube.com/@CityHarvestChurchDar/featured" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.youtube.com/@CityHarvestChurchDar/featured" target="_blank"
+                            rel="noopener noreferrer">
                             <i class="fab fa-youtube"></i>
                         </a>
                         <a href="" target="_blank" rel="noopener noreferrer">
