--- a/cityharvest/index.html
+++ b/cityharvest/index.html
@@ -22,6 +22,7 @@
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="assets/css/index.css">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="assets/css/utilities.css">
 </head>
 
@@ -44,7 +45,7 @@
                 <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
-                <li class="nav-item"><a href="" class="nav-link change-Color">Contact</a></li>
+                <li class="nav-item"><a href="app/contact.html" class="nav-link change-Color">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
                 <a href="#" class="btn btn-outline-primary login">Login</a>
@@ -68,7 +69,7 @@
             <div class="overlay"></div>
             <video src="assets/video/Napenda.mp4" muted loop autoplay></video>
         </section>
-        <!-- == Sermons === -->
+        <!-- == Services === -->
         <section id="services-schedule">
             <div class="container">
                 <div class="row">
@@ -388,9 +389,6 @@
             <div class="grid-4">
                 <div class="col">
                     <img src="assets/img/logo/logo3.png" alt="" class="logo">
-                    <!-- <p>
-                        For young professionals and college students who are committed to excellence.
-                    </p> -->
                 </div>
                 <div class="col">
                     <h3 class="col-title">QUICK LINKS</h3>
@@ -417,17 +415,17 @@
                         <a href="http://" target="_blank" rel="noopener noreferrer" class="staff-mail">Staff Mail</a>
                     </div>
                     <div class="social">
-                        <a href="https://www.youtube.com/@CityHarvestChurchDar/featured" target="_blank"
+                        <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
                             rel="noopener noreferrer">
                             <i class="fab fa-youtube"></i>
                         </a>
-                        <a href="" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-facebook"></i>
                         </a>
-                        <a href="" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-instagram"></i>
                         </a>
-                        <a href="" target="_blank" rel="noopener noreferrer">
+                        <a href="https://twitter.com/cityharvestdar" target="_blank" rel="noopener noreferrer">
                             <i class="fab fa-twitter"></i>
                         </a>
                     </div>
