--- a/cityharvest/app/contact.html
+++ b/cityharvest/app/contact.html
@@ -18,9 +18,9 @@
     <!-- === AOS (Animation On Scroll CSS) CDN === -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- === Title === -->
-    <title>City Harvest Church</title>
+    <title>City Harvest Church | Contact</title>
     <!-- === CSS === -->
-    <link rel="stylesheet" type="text/css" href="../assets/css/about.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/contact.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
@@ -41,12 +41,12 @@
         <div class="navbar-menu">
             <ul class="navbar-nav">
                 <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#home" class="nav-link active">About</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Sermons</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Publication</a></li>
                 <li class="nav-item"><a href="" class="nav-link">Ministries</a></li>
-                <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                <li class="nav-item"><a href="#home" class="nav-link active">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
                 <a href="#" class="btn btn-outline-primary login">Login</a>
@@ -62,15 +62,31 @@
             <div class="container">
                 <div class="row">
                     <div class="hero-txt">
-                        <h2>For young professionals who are commited to excellence</h2>
-                        <a href="#" class="btn btn-outline-primary">Explore</a>
+                        <h2>Contact Us</h2>
+                        <div class="social">
+                            <a href="https://www.youtube.com/@CityHarvestChurchDar" target="_blank"
+                                rel="noopener noreferrer">
+                                <i class="fab fa-youtube"></i>
+                            </a>
+                            <a href="https://www.facebook.com/cityharvestchurchdar" target="_blank"
+                                rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="https://www.instagram.com/cityharvestchurchdar/" target="_blank"
+                                rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="https://twitter.com/cityharvestdar" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- == Sermons === -->
         <section id="services-schedule">
-            <div class="container">
+            <!-- <div class="container">
                 <div class="row">
                     <div class="card p-2">
                         <div class="card-body pt-1">
@@ -102,7 +118,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- === Footer === -->
@@ -181,7 +197,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/about.js"></script>
+    <script src="../assets/js/contact.js"></script>
 </body>
 
 </html>
