--- a/cityharvest/app/contact.html
+++ b/cityharvest/app/contact.html
@@ -84,41 +84,176 @@
                 </div>
             </div>
         </section>
-        <!-- == Sermons === -->
-        <section id="services-schedule">
-            <!-- <div class="container">
-                <div class="row">
-                    <div class="card p-2">
-                        <div class="card-body pt-1">
-                            <div class="flex-space-between">
-                                <div class="head-txt">
-                                    <h1>City Harvest</h1>
-                                    <h2>SERVICES SCHEDULE</h2>
-                                </div>
-                                <div class="content-text">
-                                    <p>
-                                        First service:
-                                        <br>
-                                        <small> 07:00 AM - 09:30 AM</small>
-                                        <br>
-                                        ENGLISH
-                                    </p>
-                                </div>
-                                <div class="content-text">
-                                    <p>
-                                        Second service:
-                                        <br>
-                                        <small>10:30 AM - 13:00 PM</small>
-                                        <br>
-                                        SWAHILI
-                                    </p>
-                                </div>
+
+        <!-- == Contact-info == -->
+        <section id="contact-info">
+            <div class="container">
+                <h1 class="contact-info-title" data-aos="fade-right" data-aos-delay="100">Get In Touch</h1>
+                <div class="even-columns">
+                    <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
+                        <div class="left-our">
+                            <h1 class="head-our">OUR</h1>
+                        </div>
+                        <div class="inner-txt">
+                            <h2>Location</h2>
+                            <p>
+                                Kunduchi Road, City Harvest Street,
+                                <br>
+                                <b>PLOT</b> 199 Bahari Beach,
+                                <br>
+                                P.O.BOX 38125 Dar es Salaam.
+                            </p>
+                        </div>
+                        <i class="fas fa-map-marker-alt"></i>
+                    </div>
+                    <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
+                        <div class="left-our">
+                            <h1 class="head-our">OUR</h1>
+                        </div>
+                        <div class="inner-txt">
+                            <h2>Website</h2>
+                            <p>
+                                www.cityharvestdar.or.tz
+                            </p>
+                        </div>
+                        <i class="fas fa-globe"></i>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card p-3" data-aos="fade-right" data-aos-delay="100">
+                        <div class="left-our">
+                            <h1 class="head-our">OUR</h1>
+                        </div>
+                        <div class="inner-txt">
+                            <h2>Email</h2>
+                            <p>
+                                cityharvestdar@yahoo.com
+                            </p>
+                        </div>
+                        <i class="fas fa-envelope"></i>
+                    </div>
+                    <div class="card p-3" data-aos="fade-left" data-aos-delay="100">
+                        <div class="left-our">
+                            <h1 class="head-our">OUR</h1>
+                        </div>
+                        <div class="inner-txt">
+                            <h2>Phone</h2>
+                            <p>
+                                +255 654 340 122
+                            </p>
+                        </div>
+                        <i class="fas fa-phone"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- == Contact-Form == -->
+        <section id="contact-form-wrapper">
+            <div class="container">
+                <h1 class="heading-txt" data-aos="fade-left" data-aos-delay="100">Leave a Message</h1>
+                <p class="heading-para">
+                    Please fill in the field below and we will respond
+                    as soon as possible.
+                </p>
+                <div class="even-columns">
+                    <div class="contact-form" data-aos="fade-left" data-aos-delay="100">
+                        <form action="#">
+                            <div class="inputs-text-box">
+                                <input type="text" name="fulname" id="fulname" placeholder="Name" required>
+                                <input type="text" name="email" id="email" placeholder="Email" required>
                             </div>
+                            <!-- <div class="inputs-text-box"> -->
+                            <!-- <input type="tel" name="text" id="tel" placeholder="Phone" required> -->
+                            <input type="text" name="subject" id="fname" placeholder="Subject" required>
+                            <!-- </div> -->
+                            <textarea name="textarea" id="textarea" cols="30" rows="10" placeholder="Message"
+                                required></textarea>
+                            <input type="submit" value="Send Message" class="send">
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- == weekly-services == -->
+        <section id="weekly-services">
+            <div class="container">
+                <h1 class="weekly-services-title" data-aos="fade-right" data-aos-delay="100">WEEKLY GATHERINGS</h1>
+                <div class="even-columns">
+                    <div class="card bg-white" data-aos="flip-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>SUNDAY</h2>
+                            <p>
+                            <div class="first-service">
+                                First Service:
+                                <br>
+                                <small><b>7:00 AM - 9:00 AM</b></small>
+                            </div>
+                            <hr>
+                            <div class="second-service">
+                                Second Service:
+                                <br>
+                                <small><b>09:30 AM - 12:30 PM</b></small>
+                            </div>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="even-columns">
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>TUESDAY</h2>
+                            <p>
+                                WELL.COM Groups:
+                                <br>
+                                <small><b>5:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                    <div class="card" id="wed" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>WEDNESDAY</h2>
+                            <p>
+                                Evening Service:
+                                <br>
+                                <small><b>4:30 PM - 6:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
+                        </div>
+                    </div>
+                    <div class="card" data-aos="fade-up" data-aos-delay="100">
+                        <div class="card-body">
+                            <h2>FRIDAY</h2>
+                            <p>
+                                Evening Prayers:
+                                <br>
+                                <small><b>4:30 PM - 6:00 PM</b></small>
+                            </p>
+                        </div>
+                        <div class="weekly-services-text">
+                            <span>SERVICE</span>
                         </div>
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
+
+        <!-- == Locatiokn | Map === -->
+        <section class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15851.815731606217!2d39.1964697!3d-6.6526324!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x185c56d87bbebbcd%3A0xc7de11771fe2e7b!2sTAG%20City%20Harvest%20Church!5e0!3m2!1sen!2stz!4v1693526359062!5m2!1sen!2stz"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </section>
     </main>
 
     <!-- === Footer === -->
