--- a/cityharvest/app/contact.html
+++ b/cityharvest/app/contact.html
@@ -22,7 +22,6 @@
     <!-- === CSS === -->
     <link rel="stylesheet" type="text/css" href="../assets/css/contact.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../assets/css/header.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <link rel="stylesheet" type="text/css" href="../assets/css/utilities.css">
 </head>
@@ -32,7 +31,7 @@
     <!-- === Navigation === -->
     <nav class="navbar">
         <a href="#home" class="nav-brand">
-            <img src="../assets/img/logo/logo3.png" alt="" id="logo">
+            <img src="../assets/img/logo/logo2.png" alt="" id="logo">
         </a>
         <label for="check" id="check-btn">
             <i class="fas fa-th-large"></i>
@@ -40,12 +39,12 @@
         <input type="checkbox" name="check" id="check">
         <div class="navbar-menu">
             <ul class="navbar-nav">
-                <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Sermons</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Get Involved</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Publication</a></li>
-                <li class="nav-item"><a href="" class="nav-link">Ministries</a></li>
+                <li class="nav-item"><a href="../index.html" class="nav-link change-Color">Home</a></li>
+                <li class="nav-item"><a href="about.html" class="nav-link change-Color">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Sermons</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Get Involved</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Publication</a></li>
+                <li class="nav-item"><a href="" class="nav-link change-Color">Ministries</a></li>
                 <li class="nav-item"><a href="#home" class="nav-link active">Contact</a></li>
             </ul>
             <div class="flex-space-between login-give">
